hide coins indicator

--- a/SportsSideKick/app/src/main/res/values/styles.xml
+++ b/SportsSideKick/app/src/main/res/values/styles.xml
@@ -11,6 +11,7 @@
         <item name="colorControlActivated">@color/colorAccentSemiDark</item>
         <item name="colorControlHighlight">@color/colorAccentSemiDark</item>
         <item name="colorPrimarySemiLight">@color/colorPrimarySemiLight</item>
+        <item name="colorControlHighlight">#3e000000</item>
         <item name="android:windowBackground">@color/colorPrimarySemiDark</item>
 
         <item name="black">@color/black</item>
