--- a/SportsSideKick/app/src/main/res/layout/activity_main.xml
+++ b/SportsSideKick/app/src/main/res/layout/activity_main.xml
@@ -183,6 +183,7 @@
             android:id="@+id/fragment_radio_container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:visibility="gone"
             android:layout_above="@+id/bottom_menu_recycler_view"
             android:layout_below="@+id/left_top_bar_container"
             android:orientation="vertical">
@@ -237,12 +238,13 @@
             <android.support.percent.PercentRelativeLayout
                 android:id="@+id/profile"
                 android:layout_width="match_parent"
+                android:paddingTop="24dp"
                 android:layout_height="match_parent"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
                 android:background="@color/white"
                 android:onClick="onProfileClicked"
-                app:layout_heightPercent="14.5%">
+                app:layout_heightPercent="17.5%">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -264,7 +266,7 @@
                     android:layout_height="match_parent"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentTop="true"
-                    app:layout_widthPercent="50%">
+                    app:layout_widthPercent="100%">
 
                     <RelativeLayout
                         android:layout_width="wrap_content"
@@ -347,6 +349,7 @@
                     <android.support.percent.PercentRelativeLayout
                         android:id="@+id/your_coins"
                         android:layout_width="wrap_content"
+                        android:visibility="gone"
                         android:layout_height="wrap_content"
                         android:layout_centerInParent="true"
                         android:gravity="center_horizontal"
