--- a/SportsSideKick/app/src/sportsidekick/res/values/colors.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/values/colors.xml
@@ -1,45 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <color name="colorAccentDark"                           >#4ff70e</color>
-    <color name="colorAccentSemiDark"                       >#c3ff00</color>
+    <color name="colorAccentDark">#4ff70e</color>
+    <color name="colorAccentSemiDark">#c3ff00</color>
 
-    <color name="colorAccent"                               >#ffe324</color>
+    <color name="colorAccent">#ffe324</color>
 
-    <color name="colorAccentLight"                          >#fdfe24</color>
-    <color name="colorPrimaryAbsoluteDark"                  >#00181e</color>
-    <color name="colorPrimaryVeryDark"                      >#032227</color>
-    <color name="colorPrimaryDark"                          >#162731</color>
-    <color name="colorPrimaryMediumDark"                    >#022426</color>
-    <color name="colorPrimaryMediumDarkSemiTransparent"   >#99021119</color>
-    <color name="colorPrimarySemiDark"                      >#022b31</color>
-    <color name="colorPrimarySemiDarkSemiTransparent"     >#a800363b</color>
+    <color name="colorAccentLight">#fdfe24</color>
+    <color name="colorPrimaryAbsoluteDark">#00181e</color>
+    <color name="colorPrimaryVeryDark">#032227</color>
+    <color name="colorPrimaryDark">#162731</color>
+    <color name="colorPrimaryMediumDark">#022426</color>
+    <color name="colorPrimaryMediumDarkSemiTransparent">#99021119</color>
+    <color name="colorPrimarySemiDark">#022b31</color>
+    <color name="colorPrimarySemiDarkSemiTransparent">#a800363b</color>
 
-    <color name="colorPrimary"                              >#023639</color>
+    <color name="colorPrimary">#023639</color>
 
-    <color name="colorPrimarySlightlyLight"                 >#005e30</color>
-    <color name="colorPrimaryMediumLight"                   >#115e38</color>
-    <color name="colorPrimarySemiLight"                     >#1e6341</color>
-    <color name="colorPrimaryLight"                         >#2c6147</color>
-    <color name="colorPrimaryVeryLight"                     >#00A352</color>
+    <color name="colorPrimarySlightlyLight">#005e30</color>
+    <color name="colorPrimaryMediumLight">#115e38</color>
+    <color name="colorPrimarySemiLight">#1e6341</color>
+    <color name="colorPrimaryLight">#2c6147</color>
+    <color name="colorPrimaryVeryLight">#3d1e6341</color>
 
-    <color name="transparent"                             >#00ffffff</color>
+    <color name="transparent">#00ffffff</color>
 
-    <color name="black"                                     >#000000</color>
-    <color name="black_transparent_154"                   >#9a000000</color>
-    <color name="colorGray"                                 >#9ba1a3</color>
-    <color name="colorGrayMediumLight"                      >#f6f6f6</color>
-    <color name="login_background"                          >#e5e5e5</color>
-    <color name="chat_content_right_color"                  >#e6f7f4</color>
-    <color name="colorGraySemiLight"                        >#d3d4d8</color>
-    <color name="colorGrayLight"                            >#e9eaee</color>
-    <color name="colorGrayDark"                            >#454644</color>
-    <color name="white_semitransparent"                   >#5fffffff</color>
-    <color name="white"                                     >#ffffff</color>
+    <color name="black">#000000</color>
+    <color name="black_transparent_154">#9a000000</color>
+    <color name="colorGray">#9ba1a3</color>
+    <color name="colorGrayMediumLight">#f6f6f6</color>
+    <color name="login_background">#e5e5e5</color>
+    <color name="chat_content_right_color">#e6f7f4</color>
+    <color name="colorGraySemiLight">#d3d4d8</color>
+    <color name="colorGrayLight">#e9eaee</color>
+    <color name="colorGrayDark">#454644</color>
+    <color name="white_semitransparent">#5fffffff</color>
+    <color name="white">#ffffff</color>
 
-    <color name="facebook_blue"                             >#3b5998</color>
-    <color name="shop_blue"                                 >#0be5ff</color>
-    <color name="stats_pink"                                >#ff0b5b</color>
+    <color name="facebook_blue">#3b5998</color>
+    <color name="shop_blue">#0be5ff</color>
+    <color name="stats_pink">#ff0b5b</color>
     <color name="phoneLoungeTickerColor">#C2FF01</color>
 
 </resources>
