--- a/SportsSideKick/app/src/main/res/layout/row_menu_navigation.xml
+++ b/SportsSideKick/app/src/main/res/layout/row_menu_navigation.xml
@@ -23,6 +23,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAlignment="center"
-            android:textColor="@color/colorPrimaryVeryLight" />
+            android:textColor="#6a000000" />
     </LinearLayout>
 </RelativeLayout>
