--- a/SportsSideKick/app/src/main/res/layout/fragment_chat.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_chat.xml
@@ -4,6 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?white_semitransparent"
+    android:paddingTop="72dp"
+    tools:paddingTop="0dp"
     tools:context="base.app.fragment.instance.ChatFragment">
 
     <!-- Background image -->
