--- a/SportsSideKick/app/src/sportsidekick/res/values/colors.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/values/colors.xml
@@ -21,7 +21,7 @@
     <color name="colorPrimaryMediumLight">#115e38</color>
     <color name="colorPrimarySemiLight">#1e6341</color>
     <color name="colorPrimaryLight">#2c6147</color>
-    <color name="colorPrimaryVeryLight">#3d1e6341</color>
+    <color name="colorPrimaryVeryLight">#00A352</color>
 
     <color name="transparent">#00ffffff</color>
 
