--- a/SportsSideKick/app/src/main/res/layout/activity_main.xml
+++ b/SportsSideKick/app/src/main/res/layout/activity_main.xml
@@ -79,6 +79,7 @@
             <ImageView
                 android:id="@+id/notification_open"
                 android:layout_width="@dimen/top_bar_logo_tema_size"
+                android:visibility="gone"
                 android:layout_height="match_parent"
                 android:layout_alignParentTop="true"
                 android:layout_marginTop="24dp"
