--- a/SportsSideKick/app/src/main/res/layout/fragment_news_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_news_item.xml
@@ -491,6 +491,8 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:background="@null"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
                     android:enabled="false"
                     android:text="Shared message will appear here"
                     android:textColor="#cd008643" />
