--- a/SportsSideKick/app/src/main/res/layout/wall_item_news.xml
+++ b/SportsSideKick/app/src/main/res/layout/wall_item_news.xml
@@ -12,19 +12,19 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="120dp"
+        android:layout_height="wrap_content"
         android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/image"
-            android:layout_width="155dp"
-            android:layout_height="120dp"
+            android:layout_width="130dp"
+            android:layout_height="110dp"
             android:scaleType="centerCrop"
             tools:src="@drawable/news_holder_image"/>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="120dp"
+            android:layout_height="match_parent"
             android:paddingBottom="4dp"
             android:orientation="vertical">
 
@@ -126,8 +126,8 @@ tools:visibility="visible">
 
 <de.hdodenhof.circleimageview.CircleImageView
     android:id="@+id/comment_author_user_image"
-    android:layout_width="@dimen/width_26"
-    android:layout_height="@dimen/height_26"
+    android:layout_width="24dp"
+    android:layout_height="24dp"
     android:layout_alignParentStart="true"
     android:layout_alignParentTop="true"
     android:layout_marginBottom="@dimen/margin_10"
@@ -149,8 +149,9 @@ tools:visibility="visible">
     android:padding="@dimen/padding_8"
     android:scrollHorizontally="true"
     android:text="@string/demo_content_lorem_long"
-    android:textColor="?black"
+    android:textColor="#bd000000"
     android:textSize="@dimen/font_size_14"/>
+
 </RelativeLayout>
 
 <View
