--- a/SportsSideKick/app/src/main/res/layout/include_input_field.xml
+++ b/SportsSideKick/app/src/main/res/layout/include_input_field.xml
@@ -7,8 +7,13 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_alignParentBottom="true"
-    android:background="@color/colorGrayLight"
+    android:background="#f7f7f7"
     tools:showIn="@layout/fragment_news_item">
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#3c000000"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -39,8 +44,7 @@
             android:hint="@string/enter_comment_hint"
             android:textColor="@color/black"
             android:textColorHint="@color/colorGrayDark"
-            android:textSize="@dimen/font_size_12"
-            app:backgroundTint="@color/colorGrayLight"/>
+            android:textSize="@dimen/font_size_12"/>
 
     </LinearLayout>
 
