--- a/SportsSideKick/app/src/main/res/layout/include_input_field.xml
+++ b/SportsSideKick/app/src/main/res/layout/include_input_field.xml
@@ -34,11 +34,12 @@
         <android.support.v7.widget.AppCompatEditText
             android:id="@+id/post_text"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:layout_marginBottom="@dimen/margin_5"
             android:inputType="textCapSentences"
             android:layout_marginEnd="@dimen/margin_15"
             android:layout_marginStart="@dimen/margin_15"
+            android:background="@null"
             android:layout_marginTop="@dimen/margin_5"
             android:layout_weight="1"
             android:hint="@string/enter_comment_hint"
