--- a/SportsSideKick/app/src/main/res/layout/fragment_news_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_news_item.xml
@@ -505,11 +505,40 @@
                     android:background="#01A352" />
 
                 <ImageButton
+                    android:id="@+id/sharedMessageMoreButton"
                     style="@style/Widget.AppCompat.Button.Borderless"
                     android:layout_width="60dp"
                     android:layout_height="wrap_content"
                     android:src="@drawable/ic_more_horiz_black_24dp"
                     android:tint="#01A352" />
+
+                <LinearLayout
+                    android:id="@+id/sharedMessageDeleteEditContainer"
+                    android:layout_width="60dp"
+                    android:visibility="gone"
+                    tools:visibility="visible"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <Button
+                        android:id="@+id/sharedMessageEditButton"
+                        android:background="@color/colorPrimaryVeryLight"
+                        android:textColor="@color/white"
+                        android:layout_width="match_parent"
+                        android:layout_height="36dp"
+                        android:text="Edit"
+                        android:textAllCaps="false"/>
+
+                    <Button
+                        android:id="@+id/sharedMessageDeleteButton"
+                        android:background="@color/colorPrimaryVeryLight"
+                        android:textColor="@color/white"
+                        android:layout_width="match_parent"
+                        android:layout_height="36dp"
+                        android:text="Delete"
+                        android:textAllCaps="false"/>
+
+                </LinearLayout>
 
             </LinearLayout>
 
