--- a/SportsSideKick/app/src/main/res/layout/wall_item_rumours.xml
+++ b/SportsSideKick/app/src/main/res/layout/wall_item_rumours.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -14,45 +15,48 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/image"
-            android:layout_width="130dp"
-            android:layout_height="110dp"
-            android:scaleType="centerCrop"
-            tools:src="@drawable/news_holder_image" />
+        <View
+            android:id="@+id/strip"
+            android:layout_width="@dimen/width_6"
+            android:layout_height="match_parent"
+            android:layout_alignBottom="@+id/likes_and_comments"
+            android:layout_alignParentTop="true"
+            android:background="#CDF833" />
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:paddingBottom="4dp">
+            android:paddingBottom="4dp"
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/text_content"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="-4dp"
                 android:ellipsize="end"
-                android:lineSpacingMultiplier="0.8"
                 android:maxLines="3"
-                android:paddingBottom="8dp"
-                android:paddingLeft="16dp"
-                android:paddingRight="16dp"
+                android:layout_marginTop="-4dp"
+                android:lineSpacingMultiplier="0.8"
                 android:paddingTop="16dp"
+                android:paddingLeft="8dp"
+                android:paddingRight="16dp"
+                android:paddingBottom="8dp"
                 android:text="@string/demo_content_lorem_long"
                 android:textColor="#1b1c1a"
-                android:textSize="18sp" />
+                android:textSize="18sp"/>
 
             <android.support.v4.widget.Space
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="1" />
+                android:layout_weight="1"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="8dp"
                 android:gravity="bottom"
+                android:layout_marginRight="8dp"
+                android:layout_marginLeft="8dp"
                 android:orientation="horizontal">
 
                 <!--TODO: Show author image if this is a pinned item, not official news-->
@@ -64,34 +68,36 @@
                     android:layout_centerVertical="true"
                     android:layout_marginStart="@dimen/padding_10"
                     android:src="?profileImageIcon"
-                    android:visibility="gone" />
+                    android:visibility="gone"/>
 
                 <Space
+                    android:id="@+id/spacer"
+                    android:visibility="gone"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1" />
+                    android:layout_weight="1"/>
 
                 <android.support.v7.widget.AppCompatImageView
                     android:id="@+id/comments_icon"
                     android:layout_width="@dimen/width_15"
                     android:layout_height="@dimen/width_15"
                     android:layout_marginEnd="@dimen/margin_2"
-                    android:background="@drawable/ic_comments_count" />
+                    android:background="@drawable/ic_comments_count"/>
 
                 <TextView
                     android:id="@+id/comments_count"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
                     android:layout_marginRight="8dp"
+                    android:layout_height="wrap_content"
                     android:text="@string/demo_content_number_1"
-                    android:textSize="@dimen/font_size_10" />
+                    android:textSize="@dimen/font_size_10"/>
 
                 <android.support.v7.widget.AppCompatImageView
                     android:id="@+id/likes_icon"
                     android:layout_width="@dimen/width_15"
                     android:layout_height="@dimen/height_15"
                     android:layout_marginEnd="@dimen/margin_2"
-                    android:background="@drawable/ic_like" />
+                    android:background="@drawable/ic_like"/>
 
                 <android.support.v7.widget.AppCompatImageView
                     android:id="@+id/liked_icon"
@@ -100,62 +106,68 @@
                     android:layout_marginEnd="@dimen/margin_2"
                     android:background="@drawable/ic_like"
                     android:visibility="gone"
-                    app:backgroundTint="@color/colorPrimaryVeryLight" />
+                    app:backgroundTint="@color/colorPrimaryVeryLight"/>
 
                 <TextView
                     android:id="@+id/likes_count"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/demo_content_number_2"
-                    android:textSize="@dimen/font_size_10" />
-
-            </LinearLayout>
+                    android:textSize="@dimen/font_size_10"/>
 
         </LinearLayout>
 
     </LinearLayout>
 
-    <RelativeLayout
-        android:id="@+id/comment_container"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/colorGrayMediumLight"
-        android:visibility="gone"
-        tools:visibility="visible">
-
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/comment_author_user_image"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginBottom="@dimen/margin_10"
-            android:layout_marginStart="@dimen/margin_10"
-            android:layout_marginTop="@dimen/margin_8"
-            android:src="?profileImageIcon" />
-
-        <TextView
-            android:id="@+id/text_comment"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginStart="@dimen/margin_10"
-            android:layout_toEndOf="@+id/comment_author_user_image"
-            android:ellipsize="end"
-            android:lineSpacingMultiplier="0.826"
-            android:maxLines="4"
-            android:minLines="1"
-            android:padding="@dimen/padding_8"
-            android:scrollHorizontally="true"
-            android:text="@string/demo_content_lorem_long"
-            android:textColor="#bd000000"
-            android:textSize="@dimen/font_size_14" />
-
-    </RelativeLayout>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/height_2"
-        android:background="@drawable/wall_item_shadow" />
+        <ImageView
+            android:id="@+id/image"
+            android:layout_width="130dp"
+            android:layout_height="110dp"
+            android:scaleType="centerCrop"
+            tools:src="@drawable/news_holder_image"/>
 
 </LinearLayout>
+
+<RelativeLayout
+android:id="@+id/comment_container"
+android:layout_width="match_parent"
+android:layout_height="wrap_content"
+android:background="@color/colorGrayMediumLight"
+android:visibility="gone">
+
+<de.hdodenhof.circleimageview.CircleImageView
+    android:id="@+id/comment_author_user_image"
+    android:layout_width="24dp"
+    android:layout_height="24dp"
+    android:layout_alignParentStart="true"
+    android:layout_alignParentTop="true"
+    android:layout_marginBottom="@dimen/margin_10"
+    android:layout_marginStart="@dimen/margin_10"
+    android:layout_marginTop="@dimen/margin_8"
+    android:src="?profileImageIcon"/>
+
+<TextView
+    android:id="@+id/text_comment"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_centerVertical="true"
+    android:layout_marginStart="@dimen/margin_10"
+    android:layout_toEndOf="@+id/comment_author_user_image"
+    android:ellipsize="end"
+    android:lineSpacingMultiplier="0.826"
+    android:maxLines="4"
+    android:minLines="1"
+    android:padding="@dimen/padding_8"
+    android:scrollHorizontally="true"
+    android:text="@string/demo_content_lorem_long"
+    android:textColor="#bd000000"
+    android:textSize="@dimen/font_size_14"/>
+
+</RelativeLayout>
+
+<View
+android:layout_width="match_parent"
+android:layout_height="@dimen/height_2"
+android:background="@drawable/wall_item_shadow"/>
+
+    </LinearLayout>
